# eevee

./: .pre-commit-config.yaml  README.md  output.md  pyproject.toml
.github/workflows/: cron.yml  publish.yml
config/: default.yaml
examples/: bor_v1.4.0.ipynb
samples/rss/: arbitrum_status_incident_history.json  avalanchego.json  release_notes_from_avalanchego.json  release_notes_from_bor.json  release_notes_from_bsc.json  release_notes_from_coregeth.json  release_notes_from_coreth.json  release_notes_from_goethereum.json  release_notes_from_heimdall.json  release_notes_from_mevboost.json  release_notes_from_nitro.json  release_notes_from_omnicore.json  release_notes_from_prysm.json  release_notes_from_web3signer.json
scripts/: download_rss.py
src/eevee/: app.py  cli.py  config.py  hardfork.py  redis.py  result.py  rss.py  slack.py  utils.py
tests/: test_rss.py  test_slack.py  test_utils.py
